[gd_scene load_steps=8 format=2]

[ext_resource path="res://theme-default.tres" type="Theme" id=1]
[ext_resource path="res://components/game_avatar.gd" type="Script" id=2]
[ext_resource path="res://components/avatar.tscn" type="PackedScene" id=3]
[ext_resource path="res://art-built/health-heart.png" type="Texture2D" id=4]
[ext_resource path="res://fonts/Amaranth-Bold-24.tres" type="FontFile" id=5]
[ext_resource path="res://art-built/mana-gem-big.png" type="Texture2D" id=6]
[ext_resource path="res://fonts/Amaranth-Regular-24.tres" type="FontFile" id=7]

[node name="game_avatar" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 200.0
offset_bottom = 200.0
custom_minimum_size = Vector2( 200, 200 )
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Mouse", "Rect", "Theme" ]
flipped = false

[node name="avatar" parent="." index="0" instance=ExtResource( 3 )]

[node name="health" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 17.0
offset_top = 132.0
offset_right = 67.0
offset_bottom = 182.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Mouse", "Rect", "Visibility" ]

[node name="hp_label" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 23.0
offset_top = 133.0
offset_right = 63.0
offset_bottom = 173.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme_override_fonts/font = ExtResource( 5 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 1, 0.0196078, 0.294118, 1 )
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 1
text = "25"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="mana_box" type="Control" parent="." index="3"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -88.0
offset_top = -71.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin", "Mouse" ]

[node name="mana" type="TextureRect" parent="mana_box" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 50.0
offset_bottom = 48.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 6 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "Rect" ]

[node name="mp_label" type="Label" parent="mana_box" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 3.0
offset_top = 5.0
offset_right = 49.0
offset_bottom = 45.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme_override_fonts/font = ExtResource( 5 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_shadow_color = Color( 0.270588, 0.545098, 1, 1 )
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 1
text = "2"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "Mouse", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="mp_detail" type="Label" parent="mana_box" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 46.0
offset_top = 6.0
offset_right = 94.0
offset_bottom = 46.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme_override_fonts/font = ExtResource( 7 )
theme_override_colors/font_color = Color( 0.270588, 0.545098, 1, 1 )
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 1
text = "/10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="mp_regen_label" type="Label" parent="mana_box" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 29.0
offset_top = 36.0
offset_right = 77.0
offset_bottom = 76.0
pivot_offset = Vector2( 0, 0 )
clip_contents = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme_override_fonts/font = ExtResource( 7 )
theme_override_colors/font_color = Color( 0.270588, 0.545098, 1, 1 )
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/shadow_outline_size = 1
text = "+3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_colors", "custom_constants", "custom_fonts" ]


